Test: Alterei get(0) para getFirst() no testeImportarDeJson_ArquivoValido